--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    tools:ignore="Autofill">
 
     <TextView
         android:id="@+id/txt_resultado"
@@ -84,7 +85,7 @@
         android:id="@+id/btn_multiplicarNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="8dp"
         android:text="@string/btn_multiplicacao"
@@ -98,7 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="37dp"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="84dp"
+        android:layout_marginEnd="64dp"
         android:text="@string/btn_divisao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_multiplicarNum"
